--- a/UI/package.json
+++ b/UI/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/kaudeshali/Kaushal_Desai_Full_Stack_Assignment_2#readme",
   "dependencies": {
     "apollo-server-express": "^3.13.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "nodemon": "^3.1.0"
   }
