--- a/UI/package.json
+++ b/UI/package.json
@@ -24,6 +24,7 @@
     "apollo-server-express": "^3.13.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "react": "^18.2.0"
   }
 }
