--- a/UI/package.json
+++ b/UI/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-move": "^6.5.0",
     "react-router-dom": "^6.22.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
