--- a/UI/package.json
+++ b/UI/package.json
@@ -33,6 +33,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.1"
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.3"
   }
 }
