--- a/UI/package.json
+++ b/UI/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/cli": "^7.24.1",
     "@babel/core": "^7.24.3",
-    "@babel/preset-env": "^7.24.3"
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1"
   }
 }
