--- a/UI/package.json
+++ b/UI/package.json
@@ -40,6 +40,7 @@
     "babel-loader": "^9.1.3",
     "babel-polyfill": "^6.26.0",
     "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4"
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
