--- a/UI/package.json
+++ b/UI/package.json
@@ -41,6 +41,7 @@
     "babel-polyfill": "^6.26.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0"
   }
 }
