--- a/UI/package.json
+++ b/UI/package.json
@@ -4,7 +4,12 @@
   "description": "UI Part Of EMS System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "compile": "webpack --mode development",
+    "watch": "webpack -w --config webpack.config.js",
+    "linter": "eslint  JSX --ext js,jsx",
+    "linterfix": "eslint  JSX --ext js,jsx --fix"
   },
   "repository": {
     "type": "git",
